# sleep-disorder-prediction

./: .gitignore  Jenkinsfile  README.md  create_project_dir.py  custom_requirements.txt  pyproject.toml  requirements.txt
config/: train_config.yaml
data/processed/: processed_data.csv
notebooks/: main.ipynb
notebooks/mlruns/0/: meta.yaml
src/: preprocess.py  train.py  utilities.py
src/sleep_disorder/: __init__.py  preprocess.py  train.py  utilities.py
test/: test.ipynb
